# auto-vmware

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/auto_vmware/: __init__.py  __main__.py  autobuild.py  cidata.py  cli.py  config.py  log.py  orchestrate.py  preseed.py  provision.py  sshutil.py  vmcreate.py
tests/: test_config.py  test_provision.py
